dc-dec_onboarding/kubernetes/onboarding-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet-onboarding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallet-onboarding
  template:
    metadata:
      name: wallet-onboarding
      labels:
        app: wallet-onboarding
    spec:
      containers:
      - name: wallet-onboarding
        image: oydeu/dc-dec_onboarding:latest
        ports:
        - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: wallet-onboarding
spec:
  selector:
    app: wallet-onboarding
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallet-onboarding
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - onboarding.staging.dec112.eu
    secretName: wallet-onboarding-tls
  rules:
  - host: onboarding.staging.dec112.eu
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: wallet-onboarding
            port:
              number: 80
